tests/facebook_fbt_none/facebook_fbt_none.exp
Error -------------------------------------------------------------- main.js:4:2

Error: main.js:4
  4: (<fbt />: number); // Error: ReactElement ~> number
      ^^^^^^^ Cannot cast `<fbt />` to number because `React.Element` [1] is incompatible with number [2].
  References:
    4: (<fbt />: number); // Error: ReactElement ~> number
        ^^^^^^^ [1]: `React.Element`
    4: (<fbt />: number); // Error: ReactElement ~> number
                 ^^^^^^ [2]: number


Found 1 error
